--- a/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
+++ b/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
@@ -1,7 +1,89 @@
+
+<div class="card card-custom gutter-b">
+  <div class="card-header">
+    <div class="card-title ">
+      <h3 class="card-label">Tipos de Habitaciòn</h3>
+    </div>
+  </div> 
+
+  <div class="card-body">
+
+
+    <!-- begin: Grouping -->
+    <ng-container *ngIf="grouping.getSelectedRowsCount()">
+      <div class="form">
+        <div class="row align-items-center form-group-actions margin-top-20 margin-bottom-20">
+          <div class="col-xl-12">
+            <div class="form-group form-group-inline">
+              <div class="form-label form-label-no-wrap">
+                <label class="font-bold font-danger"><span>Selected records count:
+                    <b>{{ grouping.getSelectedRowsCount() }}</b></span></label>
+              </div>
+             
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+    <!-- end: Grouping -->
+
+    <!-- begin:Table -->
+    <div class="table-responsive angular-bootstrap-table">
+
+      <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <!-- Codigo Column -->
+        <ng-container matColumnDef="Codigo">
+          <mat-header-cell *matHeaderCellDef> Codigo </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.Codigo}} </mat-cell>
+        </ng-container>
+      
+        <!-- Capacidad Column -->
+        <ng-container matColumnDef="Capacidad">
+          <mat-header-cell *matHeaderCellDef> Capacidad </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.Capacidad}} </mat-cell>
+        </ng-container>
+      
+        <!-- Tipo Column -->
+        <ng-container matColumnDef="Tipo">
+          <mat-header-cell *matHeaderCellDef> Tipo </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.Tipo}} </mat-cell>
+        </ng-container>
+      
+        <!-- Inventario Column -->
+        <ng-container matColumnDef="Inventario">
+          <mat-header-cell *matHeaderCellDef> Inventario </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.Inventario}} </mat-cell>
+        </ng-container>        
+        
+        <!-- Acciones Column -->
+        <ng-container matColumnDef="Acciones">
+          <mat-header-cell mat-header-cell *matHeaderCellDef> Agregar al Inventario </mat-header-cell>
+          <mat-cell (click)="$event.stopPropagation()" mat-cell *matCellDef="let element"> 
+            <a
+                title="Agregar"
+                class="mx-3 btn btn-icon btn-light btn-hover-success btn-sm"
+                >
+                <span (click)="add(element)" [inlineSVG]="'./assets/media/svg/icons/Navigation/Plus.svg'" cacheSVG="true"
+                  class="svg-icon svg-icon-md svg-icon-success">
+                </span>
+              </a> 
+          </mat-cell>
+        </ng-container>
+      
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+    </div>
+    <!-- end: Table -->
+    <!-- <app-paginator class="flex-wrap d-flex justify-content-between align-items-center" [paginator]="paginator"
+      [isLoading]="isLoading" (paginate)="paginate($event)"></app-paginator> -->
+  </div>
+</div>
+
 <div class="card card-custom gutter-b">
     <div class="card-header">
       <div class="card-title ">
-        <h3 class="card-label">Habitación</h3>
+        <h3 class="card-label">Desglose de Habitaciones</h3>
         <button style="position: absolute; right: 0px; margin: 10px;" class="btn btn-primary" (click)="altaDehabitacion()">Agregar Nueva Habitacin</button>
       </div>
     </div> 
@@ -52,11 +134,11 @@
               <app-sort-icon column="Personas" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
                 (sort)="sort($event)"></app-sort-icon>
             </th>
-            <th>
+            <!-- <th>
               Inventario
               <app-sort-icon column="Inventario" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
                 (sort)="sort($event)"></app-sort-icon>
-            </th>
+            </th> -->
             <th>Acciones</th>
           </thead>
           <tbody>
@@ -65,7 +147,7 @@
               <td style="text-align: center; vertical-align: middle;">{{ habitacion.Numero }}</td>
               <td style="text-align: center; vertical-align: middle;">{{ habitacion.Tipo }}</td>
                 <td style="text-align: center; vertical-align: middle;">{{ habitacion.Personas }}</td>
-                <td style="text-align: center; vertical-align: middle;">1</td>
+                <!-- <td style="text-align: center; vertical-align: middle;">1</td> -->
 
                 <td style="text-align: center; vertical-align: middle;">
                   <a
@@ -94,3 +176,7 @@
         [isLoading]="isLoading" (paginate)="paginate($event)"></app-paginator>
     </div>
   </div>
+
+  <ng-container *ngIf="isLoading">
+    <app-loader-spinner></app-loader-spinner>
+  </ng-container>
