--- a/src/app/pages/tarifas/components/tarifa-express/edit-express/edit-express.component.html
+++ b/src/app/pages/tarifas/components/tarifa-express/edit-express/edit-express.component.html
@@ -1,1 +1,22 @@
-<p>edit-express works!</p>
+<div class="card card-custom gutter-b">
+    <div class="card-header">
+      <div class="card-title ">
+        <h3 class="card-label">Ediciòn Tarifa Express</h3>
+        <button class="btn btn-primary" style="float: right;">
+            Ver Tarifas
+        </button>
+        <button class="btn btn-primary" style="float: right;">
+            Precios Por Bloque
+        </button>
+      </div>
+    </div>
+    <div class="card" style="background-color: rgb(211, 207, 207);">
+        <div class="row">
+            <div class="col-lg-12">
+                <label class="h4">Tarifa: </label>
+                <label class="h4"> {{tarifa.Tarifa}}</label>
+
+            </div>
+        </div>
+    </div>
+</div>
