--- a/src/app/pages/tarifas/components/main/main.component.html
+++ b/src/app/pages/tarifas/components/main/main.component.html
@@ -76,7 +76,7 @@
                   title="Editar Tarifa"
                   class="mx-3 btn btn-icon btn-light btn-hover-primary btn-sm"
                   >
-                  <span (click)="editarTarifaExpress()" [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
+                  <span (click)="editarTarifaExpress(element)" [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
                     class="svg-icon svg-icon-md svg-icon-primary">
                   </span>
                 </a>
@@ -165,7 +165,7 @@
                   title="Editar Tarifa"
                   class="mx-3 btn btn-icon btn-light btn-hover-primary btn-sm"
                   >
-                  <span (click)="editTarifaEspecial()" [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
+                  <span (click)="editTarifaEspecial(element)" [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'" cacheSVG="true"
                     class="svg-icon svg-icon-md svg-icon-primary">
                   </span>
                 </a>
