--- a/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
+++ b/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
@@ -380,3 +380,7 @@
     </div>
 
   
+
+    <ng-container *ngIf="isLoading">
+        <app-loader-spinner></app-loader-spinner>
+      </ng-container>
