--- a/src/app/pages/_layout/components/aside/aside.component.html
+++ b/src/app/pages/_layout/components/aside/aside.component.html
@@ -59,6 +59,30 @@
       <!-- end::1 Level -->
 
 <!-- Reportes -->
+<li
+class="menu-item menu-item-submenu"
+aria-haspopup="true"
+data-menu-toggle="hover"
+routerLinkActive="menu-item-open"
+>
+<a
+class="menu-link"
+routerLink="/calendario"
+routerLinkActive="active"
+>
+  <span
+    [inlineSVG]="'./assets/media/svg/icons/Shopping/Cart3.svg'"
+    cacheSVG="true"
+    class="svg-icon menu-icon"
+  ></span>
+  <span class="menu-text">Calendario</span>
+  <i class="menu-arrow"></i>
+</a>
+<div class="menu-submenu">
+  <ul class="menu-subnav">
+  </ul>
+</div>
+</li>
       <!-- begin::1 Level -->
       <li
         class="menu-item menu-item-submenu"
