--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -32,7 +32,7 @@
         <label style="color:#00506a; font-weight: bold;" class="form-label">Fecha Inicial</label>
         <div class="input-group">
 
-          <input hidden class="form-control" placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker 
+          <input hidden class="form-control" placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker
           (dateSelect)="fechaSeleccionadaInicial($event)" [minDate]="today" [startDate]="fromDate" #d="ngbDatepicker">
 
           <input class="form-control" placeholder="yyyy-mm-dd" name="dpnotHidden" #dd [value]="fechaInicial" >
@@ -152,14 +152,14 @@
 
 
               <div class="row">
-                <label style="color:#00506a; font-weight: bold;" class="form-label" >Habitación </label>
+                <label style="color:#00506a; font-weight: bold;" class="form-group col-lg-6" >Habitación </label>
                 <div class="col-lg-12">
                   <mat-select #tipodeCuartoDropDown
                   class="form-control form-control-lg "
                   name="habitacion"
                   formControlName="habitacion"
                   (selectionChange)="buscaDispo($event.value)"
-                  placeholder="-- Seleccione Tipo de Habitación -- " 
+                  placeholder="-- Seleccione Tipo de Habitación -- "
                   required
                   [disabled]="!display"
                   >
@@ -167,7 +167,7 @@
                       <mat-option value="1">Todos los Tipos de Cuartos</mat-option>
                       <mat-option *ngFor="let tipoCuarto of codigoCuarto" [value]="tipoCuarto">{{tipoCuarto.replace("_"," ")}} </mat-option>
                   </mat-select>
-                   
+
                       <mat-error *ngIf="habitacion.errors?.required">
                         * Campo Obligatorio
                       </mat-error>
@@ -229,7 +229,7 @@
                                   <ng-container *ngIf="dias.checked==true">
                                     {{dias.name}}
                                   </ng-container>
-                                </ng-container>                              
+                                </ng-container>
                               </td>
                               <td>{{tarifas.TarifaRack}}</td>
                             </tr>
@@ -240,7 +240,7 @@
                         <tbody>
                           <tr>
                             <td>
-                              <mat-radio-button  [disabled]="maximoDePersonas"                             
+                              <mat-radio-button  [disabled]="maximoDePersonas"
                               (change)="tarifaRadioButton(tarifas)">
                               </mat-radio-button> <label matTooltip="Info about the action">{{tarifas.Tarifa}}</label></td>
                               <td>
@@ -248,19 +248,19 @@
                                   <ng-container *ngIf="dias.checked==true">
                                     {{dias.name}}
                                   </ng-container>
-                                </ng-container>                              
+                                </ng-container>
                               </td>
                               <td>{{tarifas.TarifaRack * diaDif}}</td>
                           </tr>
                         </tbody>
                       </ng-container>
                     </ng-container>
-                    
+
                     <ng-container  *ngIf="tarifasArray.length!=0">
                       <tfoot>
                         <tr>
                           <td colspan=2>
-                            <h4> Habitación:</h4> 
+                            <h4> Habitación:</h4>
                             <ng-container *ngFor="let habitacionesDisponibles of mySet">
                               <ng-container *ngFor="let tipocuarto of cuartos">
                                 <ng-container *ngIf="tipocuarto.Numero == habitacionesDisponibles">
@@ -268,7 +268,7 @@
                                 </ng-container>
                               </ng-container>
                             </ng-container>
-                          </td>                 
+                          </td>
                         </tr>
                       </tfoot>
                     </ng-container>
@@ -289,9 +289,9 @@
                       <th>
                         {{divisasService.getcurrentDivisa.Simbolo}} TOTAL
                       </th>
-  
+
                     </thead>
-    
+
                         <ng-container *ngFor="let tarifas of tarifasArray">
                             <ng-container *ngIf="tarifas.Habitacion==codigosCuarto.Codigo">
                               <tbody>
@@ -303,19 +303,19 @@
                                       <ng-container *ngIf="dias.checked==true">
                                         {{dias.name}}
                                       </ng-container>
-                                    </ng-container>                              
+                                    </ng-container>
                                   </td>
                                 <td>{{tarifas.TarifaRack}}</td>
                                 </tr>
                               </tbody>
                             </ng-container>
                         </ng-container>
-                        
+
                         <ng-container  *ngIf="tarifasArray.length!=0">
                           <tfoot>
                             <tr>
                               <td colspan=2>
-                                <h4> Habitación:</h4> 
+                                <h4> Habitación:</h4>
                                 <ng-container *ngFor="let habitacionesDisponibles of inforCuartoyNombre; ">
                                   <ng-container *ngFor="let tipocuarto of cuartos">
                                     <ng-container *ngIf="tipocuarto.Numero == habitacionesDisponibles.nombreHabitacion && habitacionesDisponibles.tipodeCuarto==codigosCuarto.Codigo">
@@ -323,11 +323,11 @@
                                     </ng-container>
                                   </ng-container>
                                 </ng-container>
-                              </td>                 
+                              </td>
                             </tr>
                           </tfoot>
                         </ng-container>
-                  </table>  
+                  </table>
                   </ng-container>
               </ng-container>
 
@@ -379,51 +379,51 @@
           <div class="table-responsive mat-elevation-z8">
 
             <table  mat-table [dataSource]="dataSource" matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
-          
+
               <!-- ID Column -->
               <ng-container matColumnDef="id_Socio">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> ID Socio</th>
                 <td mat-cell *matCellDef="let row"> {{row.id_Socio}} </td>
               </ng-container>
-          
+
               <!-- Progress Column -->
               <ng-container matColumnDef="nombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
                 <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
               </ng-container>
-          
+
               <!-- Name Column -->
               <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
                 <td mat-cell *matCellDef="let row"> {{row.email}} </td>
               </ng-container>
-  
+
                <!-- Telefono Column -->
                <ng-container matColumnDef="telefono">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
                 <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
               </ng-container>
-          
+
               <!-- Fruit Column -->
               <!-- <ng-container matColumnDef="telefono">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
                 <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
               </ng-container> -->
-          
+
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onSelectHuesped(row)"></tr>
-          
+
               <!-- Row shown when there is no matching data. -->
               <tr class="mat-row" *matNoDataRow>
                 <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
               </tr>
             </table>
             <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator> -->
-  
+
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
           </div>
         </ng-container>
-       
+
         <!-- <div class="row">
           <label class="form-label" for="form1">&nbsp;&nbsp; &nbsp;Buscar Cliente</label>
           <div  class="text-center input-group col-lg-12">
@@ -556,7 +556,7 @@
             *ngIf="controlHasError('minlength', 'telefono')"
           >
             Minimo 10 numeros
-          </div> 
+          </div>
           <div
             class="invalid-feedback"
             *ngIf="controlHasError('maxlength', 'telefono')"
