--- a/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
+++ b/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="row col-lg-12">
                     <div class="form-group col-lg-6">
-                        <label style="color:#00506a; font-weight: bold;" class="form-label">Capacidad de Personas</label>
+                        <label style="color:#00506a; font-weight: bold;" class="form-label">Cantidad de Adultos</label>
                             <div class="input-group">
                                 <div class="input-group-append">
                                     <button style="background-color: transparent;border-right: 2px solid #e6e9ed; border-left: 2px solid #dadcdf; border-top : 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="minus()" type="button" ng-click="countVal=countVal+1">
@@ -153,9 +153,9 @@
                                 disabled
                                 [value]="quantity"
                                 min="1"
-                                formControlName="personas"
-                                [class.is-invalid]="isControlInvalid('personas')"
-                                [class.is-valid]="isControlValid('personas')"
+                                formControlName="adultos"
+                                [class.is-invalid]="isControlInvalid('adultos')"
+                                [class.is-valid]="isControlValid('adultos')"
                                 >
                                 <div class="input-group-append">
                                     <button style="border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf; background-color: transparent;" class="btn btn-secondary" (click)="plus()" type="button">
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="form-group col-lg-6">
-                        <label style="color:#00506a; font-weight: bold;" class="form-label">Maximo de Personas Extra</label>
+                        <label style="color:#00506a; font-weight: bold;" class="form-label">Cantidad de Niños</label>
                             <div class="input-group">
                                 <div class="input-group-append">
                                     <button style="background-color: transparent; border-left: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="minusExtra()" type="button">
@@ -180,9 +180,9 @@
                                 disabled
                                 class="text-center input-group form-control form-control-lg form-control-solid" placeholder=""
                                 [value]="quantityExtra"
-                                formControlName="extras"
-                                [class.is-invalid]="isControlInvalid('extras')"
-                                [class.is-valid]="isControlValid('extras')"
+                                formControlName="ninos"
+                                [class.is-invalid]="isControlInvalid('ninos')"
+                                [class.is-valid]="isControlValid('ninos')"
                                 >
                                 <div class="input-group-append">
                                     <button style="background-color: transparent; border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="plusExtra()" type="button">
@@ -399,6 +399,10 @@
                     <div class="form-group col-lg-12">
                     <label style="color:#00506a; font-weight: bold;">Fotografias de la Habitación</label>
                     </div>
+                </div>
+
+                <div class="bgi-no-repeat card-rounded" 
+                style="background-size: 100% 100%; height: 70%; background-image:url('{{habitacion.URL}}');">
                 </div>
 
                 <div class="container" style="width:100%">
