--- a/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
+++ b/src/app/pages/habitaciones/main/habitacion-main/habitacion-main.component.html
@@ -148,7 +148,7 @@
               <td style="text-align: center; vertical-align: middle;">{{ habitacion.Codigo }}</td>
               <td style="text-align: center; vertical-align: middle;">{{ habitacion.Numero }}</td>
               <td style="text-align: center; vertical-align: middle;">{{ habitacion.Tipo }}</td>
-                <td style="text-align: center; vertical-align: middle;">{{ habitacion.Personas }}</td>
+                <td style="text-align: center; vertical-align: middle;">{{ habitacion.Adultos }}</td>
                 <!-- <td style="text-align: center; vertical-align: middle;">1</td> -->
 
                 <td style="text-align: center; vertical-align: middle;">
