--- a/src/app/pages/tarifas/components/tarifa-express/tarifa-express.component.html
+++ b/src/app/pages/tarifas/components/tarifa-express/tarifa-express.component.html
@@ -157,7 +157,7 @@
     <ng-container *ngIf="checkboxEspecial.checked">
       <ng-container *ngFor="let item of precios.controls; let i = index">
         <div class="col-lg-6">
-          <label style="color:#00506a; font-weight: bold;" class="form-label">Precio para {{i+1}} Persona</label>
+          <label style="color:#00506a; font-weight: bold;" class="form-label">Precio para {{i+1}} Adulto(s)</label>
           <input type="number" class="form-control"  [formControl]="precios.controls[i]">
         </div>
       </ng-container>
