--- a/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
+++ b/src/app/pages/habitaciones/components/alta-habitacion/alta-habitacion.component.html
@@ -401,9 +401,9 @@
                     </div>
                 </div>
 
-                <div class="bgi-no-repeat card-rounded" 
+                <!-- <div class="bgi-no-repeat card-rounded" 
                 style="background-size: 100% 100%; height: 70%; background-image:url('{{habitacion.URL}}');">
-                </div>
+                </div> -->
 
                 <div class="container" style="width:100%">
                   <div class="my-3">
