--- a/src/app/pages/parametros/parametros.component.html
+++ b/src/app/pages/parametros/parametros.component.html
@@ -75,6 +75,24 @@
             </div>
             <div class="form-group row">
               <label class="col-lg-3 col-form-label text-lg-right"
+                >Hora de Entrada:</label
+              >
+              <div class="col-lg-9 col-xl-4">
+                <mat-form-field appearance="fill">
+                  <mat-label>--Selecciona Hora--</mat-label>
+                  <mat-select  formControlName="checkIn" required>
+                    <mat-option *ngFor="let checkIn of checkOutList" [value]="checkIn">
+                      {{checkIn}} 
+                    </mat-option>
+                  </mat-select>
+                  <!-- <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error>
+                  <mat-hint>{{animalControl.value?.sound}}</mat-hint> -->
+                </mat-form-field>
+                <div class="form-text text-muted">Seleccione la Hora en la que desea que el sistema marque de manera automatica los Check-Out.</div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-lg-3 col-form-label text-lg-right"
                 >Hora de Salida:</label
               >
               <div class="col-lg-9 col-xl-4">
@@ -109,7 +127,7 @@
                 <div class="form-text text-muted">Seleccione la Hora en la que desea que el sistema marque de manera automatica un No-Show.</div>
               </div>
             </div>
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label class="col-lg-3 col-form-label text-lg-right"
                 >Hora de Auditoria:</label
               >
@@ -121,12 +139,10 @@
                       {{auditoria}} 
                     </mat-option>
                   </mat-select>
-                  <!-- <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error>
-                  <mat-hint>{{animalControl.value?.sound}}</mat-hint> -->
                 </mat-form-field>
                 <div class="form-text text-muted">Seleccione la Hora en la que desea que el sistema realize la auditoria de cuartos.</div>
               </div>
-            </div>
+            </div> -->
           
           </div>
           <!-- end::Header -->
