--- a/src/app/modules/auth/registration/registration.component.html
+++ b/src/app/modules/auth/registration/registration.component.html
@@ -352,3 +352,12 @@
     </div>
   </ng-container>
 </ng-template>
+
+
+<ng-container *ngIf="isLoading">
+  <div class="spinner_overlay">
+    <div  class="loadingio-spinner-dual-ball-nmsq3iyutj"><div class="ldio-7vh86a8iees">
+        <div></div><div></div><div></div>
+        </div></div>
+</div>
+</ng-container>
