--- a/src/app/modules/auth/registration/registration.component.html
+++ b/src/app/modules/auth/registration/registration.component.html
@@ -354,7 +354,7 @@
 </ng-template>
 
 
-<ng-container *ngIf="isLoading">
+<ng-container *ngIf="isLoading==true">
   <div class="spinner_overlay">
     <div  class="loadingio-spinner-dual-ball-nmsq3iyutj"><div class="ldio-7vh86a8iees">
         <div></div><div></div><div></div>
