- Added Hotel to all HTTp requests

--- a/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -4,6 +4,9 @@
   <div class="" >
     <label style="color: white; font-weight: bold;">Hoy es :&nbsp; </label>  <label style="color: #FAC34E;font-weight: bold;">{{todayString}} / {{horaString}} </label>
   </div>
+  <div>
+    <button (click)="logout()" class="btn-danger">Cerrar Sesión</button>
+  </div>
 </div>
 
 <!-- <ng-container *ngIf="extraSearchDisplay">
