--- a/src/app/pages/reportes/customers/customers.component.html
+++ b/src/app/pages/reportes/customers/customers.component.html
@@ -38,7 +38,7 @@
               <select class="form-control" name="origen" placeholder="Filtro de Origenes" formControlName="origen">
                 <option value="">Todos</option>
                 <ng-container *ngFor="let origen of origenArray ">
-                  <option>{{origen.Descripcion}}</option>
+                  <option>{{origen.descripcion}}</option>
                 </ng-container>
 
               </select><small class="form-text text-muted"><b>Fitro </b> Por Origen</small>
